[package]
name = "cache_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.10.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
derive_more = "2.0.1"
tokio = { version = "1.44.1", features = ["full"] }
cachers = { git = "https://github.com/OwenPendrighElliott/cachers" }